--- a/package.json
+++ b/package.json
@@ -45,6 +45,11 @@
     ]
   },
   "devDependencies": {
-    "typescript": "^5.1.6"
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "typescript": "^4.9.5"
   }
 }
